Add new is_generic license flag #1675
Note that this is NOT YET returned in the API and outputs

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/commercial-option.yml
+++ b/src/licensedcode/data/licenses/commercial-option.yml
@@ -4,4 +4,5 @@ short_name: Commercial Option
 name: Commercial Option
 category: Commercial
 owner: Unspecified
+is_generic: yes
 notes: replaced by commercial-license
