--- a/src/licensedcode/data/licenses/commercial-license.yml
+++ b/src/licensedcode/data/licenses/commercial-license.yml
@@ -3,4 +3,6 @@ short_name: Commercial License
 name: Commercial License
 category: Commercial
 owner: Unspecified
+is_generic: yes
+notes: this is a generic commercial license
 spdx_license_key: LicenseRef-scancode-commercial-license
