--- a/src/licensedcode/data/licenses/generic-export-compliance.yml
+++ b/src/licensedcode/data/licenses/generic-export-compliance.yml
@@ -5,4 +5,5 @@ category: Unstated License
 owner: Unspecified
 notes: this is a generic export compliance notice. Actual terms are most commonly related to
     cryptography
+is_generic: yes
 spdx_license_key: LicenseRef-scancode-generic-export-compliance
