--- a/src/licensedcode/data/licenses/generic-trademark.yml
+++ b/src/licensedcode/data/licenses/generic-trademark.yml
@@ -6,6 +6,7 @@ owner: Unspecified
 notes: this is a generic export Trademark and name realted notice. Actual terms are most commonly
     related to name use restrictions and no endorsement. This should be used only for rare one-off
     notices.
+is_generic: yes
 spdx_license_key: LicenseRef-scancode-generic-trademark
 other_spdx_license_keys:
     - LicenseRef-scancode-trademark-notice
