--- a/src/licensedcode/data/licenses/public-domain.yml
+++ b/src/licensedcode/data/licenses/public-domain.yml
@@ -7,6 +7,7 @@ homepage_url: http://www.linfo.org/publicdomain.html
 spdx_license_key: LicenseRef-scancode-public-domain
 other_spdx_license_keys:
     - LicenseRef-PublicDomain
+is_generic: yes
 faq_url: http://www.linfo.org/publicdomain.html
 other_urls:
     - http://creativecommons.org/licenses/publicdomain/
