--- a/src/licensedcode/data/licenses/us-govt-public-domain.yml
+++ b/src/licensedcode/data/licenses/us-govt-public-domain.yml
@@ -7,6 +7,7 @@ notes: Per  17 U.S. Code § 105. Subject matter of copyright, United States Go
     Copyright protection under this title is not available for any work of the United States
     Government
 spdx_license_key: LicenseRef-scancode-us-govt-public-domain
+is_generic: yes
 other_urls:
     - https://www.law.cornell.edu/uscode/text/17/105
     - https://en.wikipedia.org/wiki/Copyright_status_of_works_by_the_federal_government_of_the_United_States
