Rename copyright keys for consistency #2350
This second commit updates the tests and code that did not exist yet
at the time of the initial patch or code that failed to pass tests.

In copyright detection results, rename the "value" attribute to proper
descriptive names, respectively: copyright, holder and author.

Also:
- rename "copyright_holder" to "holder" in CSV output
- apply minor refactorings

Co-authorred-by: akugarg <akanksha.garg2k@gmail.com>
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/formattedcode/data/yaml/tree/expected.yaml
+++ b/tests/formattedcode/data/yaml/tree/expected.yaml
@@ -45,11 +45,11 @@ files:
     license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
-      - value: Copyright (c) 2000 ACME, Inc.
+      - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
         end_line: 1
     holders:
-      - value: ACME, Inc.
+      - holder: ACME, Inc.
         start_line: 1
         end_line: 1
     authors: []
@@ -80,11 +80,11 @@ files:
     license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
-      - value: Copyright (c) 2000 ACME, Inc.
+      - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
         end_line: 1
     holders:
-      - value: ACME, Inc.
+      - holder: ACME, Inc.
         start_line: 1
         end_line: 1
     authors: []
@@ -115,11 +115,11 @@ files:
     license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
-      - value: Copyright (c) 2000 ACME, Inc.
+      - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
         end_line: 1
     holders:
-      - value: ACME, Inc.
+      - holder: ACME, Inc.
         start_line: 1
         end_line: 1
     authors: []
@@ -179,11 +179,11 @@ files:
     license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
-      - value: Copyright (c) 2000 ACME, Inc.
+      - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
         end_line: 1
     holders:
-      - value: ACME, Inc.
+      - holder: ACME, Inc.
         start_line: 1
         end_line: 1
     authors: []
@@ -214,11 +214,11 @@ files:
     license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
-      - value: Copyright (c) 2000 ACME, Inc.
+      - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
         end_line: 1
     holders:
-      - value: ACME, Inc.
+      - holder: ACME, Inc.
         start_line: 1
         end_line: 1
     authors: []
@@ -249,11 +249,11 @@ files:
     license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
-      - value: Copyright (c) 2000 ACME, Inc.
+      - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
         end_line: 1
     holders:
-      - value: ACME, Inc.
+      - holder: ACME, Inc.
         start_line: 1
         end_line: 1
     authors: []
@@ -284,11 +284,11 @@ files:
     license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
-      - value: Copyright (c) 2000 ACME, Inc.
+      - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
         end_line: 1
     holders:
-      - value: ACME, Inc.
+      - holder: ACME, Inc.
         start_line: 1
         end_line: 1
     authors: []
