--- a/tests/formattedcode/data/yaml/simple-expected.yaml
+++ b/tests/formattedcode/data/yaml/simple-expected.yaml
@@ -14,11 +14,11 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
-    output_format_version: 1.0.0
+    output_format_version: 2.0.0
     message:
     errors: []
     extra_data:
-      spdx_license_list_version: '3.14'
+      spdx_license_list_version: '3.15'
       files_count: 1
 packages: []
 files:
@@ -73,11 +73,11 @@ files:
     license_expressions: []
     percentage_of_license_text: '0'
     copyrights:
-      - value: Copyright (c) 2000 ACME, Inc.
+      - copyright: Copyright (c) 2000 ACME, Inc.
         start_line: 1
         end_line: 1
     holders:
-      - value: ACME, Inc.
+      - holder: ACME, Inc.
         start_line: 1
         end_line: 1
     authors: []
