--- a/src/licensedcode/data/rules/cc-by-4.0.SPDX.yml
+++ b/src/licensedcode/data/rules/cc-by-4.0.SPDX.yml
@@ -1,4 +1,4 @@
 license_expression: cc-by-4.0
-is_license_notice: yes
+is_license_text: yes
 minimum_coverage: 10
 notes: license text as published by SPDX
