Use new pip and pkginfo parsers
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,4 +16,4 @@ build: off
 
 test_script:
     - python -c "import sys;print(sys.getdefaultencoding())"
-    - cmd: "set PYTHON_EXECUTABLE=%PYTHON%\\python.exe && configure --dev && Scripts\\pytest -vvs --reruns 2 tests\\scancode"
+    - cmd: "set PYTHON_EXECUTABLE=%PYTHON%\\python.exe && configure --dev && Scripts\\pytest -vvs tests\\scancode"
