--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,8 @@ patch==1.16
 parameter-expansion-patched==0.2.1b4
 pdfminer.six==20201018
 pefile==2021.5.24
-pkginfo==1.7.0
+pkginfo2==30.0.0
+pip-requirements-parser==30.0.0
 pluggy==0.13.1
 plugincode==21.1.21
 ply==3.11
@@ -79,3 +80,4 @@ wcwidth==0.2.5
 webencodings==0.5.1
 xmltodict==0.12.0
 zipp==3.4.1
+
