--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,7 @@ install_requires =
     ftfy >=  4.0.0
     gemfileparser >= 0.7.0
     html5lib
+    # should we always use this rather than the built in code?
     importlib_metadata; python_version < "3.9"
     intbitset >= 2.3.0
     jaraco.functools
@@ -85,7 +86,8 @@ install_requires =
 	parameter-expansion-patched >= 0.2.1b4
     pdfminer.six >= 20200101
     pefile >= 2020.1.1
-    pkginfo >= 1.7.0
+    pkginfo2 >= 30.0.0
+    pip-requirements-parser >= 30.0.0
     pluggy >= 0.12.0
     plugincode >= 21.1.21
     publicsuffix2
