Use dparse2, not dparse
Also align setup-mini.cfg with setup.cfg

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ commoncode==30.0.0
 construct==2.10.67
 cryptography==3.4.7
 debian-inspector==30.0.0
-dparse==0.5.1
+dparse2==0.6.0
 extractcode==21.7.23
 extractcode-7z==16.5.210531
 extractcode-libarchive==3.5.1.210531
