--- a/setup.cfg
+++ b/setup.cfg
@@ -63,7 +63,7 @@ install_requires =
     colorama >= 0.3.9
     commoncode >= 30.0.0
     debian-inspector >= 30.0.0
-    dparse >= 0.5.1
+    dparse2 >= 0.6.0
     fasteners
     fingerprints >= 0.6.0
     ftfy >=  4.0.0
