--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -63,12 +63,13 @@ install_requires =
     colorama >= 0.3.9
     commoncode >= 30.0.0
     debian-inspector >= 30.0.0
-    dparse >= 0.5.1
+    dparse2 >= 0.6.0
     fasteners
     fingerprints >= 0.6.0
     ftfy >=  4.0.0
     gemfileparser >= 0.7.0
     html5lib
+    # should we always use this rather than the built in code?
     importlib_metadata; python_version < "3.9"
     intbitset >= 2.3.0
     jaraco.functools
@@ -85,7 +86,8 @@ install_requires =
 	parameter-expansion-patched >= 0.2.1b4
     pdfminer.six >= 20200101
     pefile >= 2020.1.1
-    pkginfo >= 1.7.0
+    pkginfo2 >= 30.0.0
+    pip-requirements-parser >= 30.0.0
     pluggy >= 0.12.0
     plugincode >= 21.1.21
     publicsuffix2
@@ -200,3 +202,5 @@ scancode_output =
     template = formattedcode.output_html:CustomTemplateOutput
     debian = formattedcode.output_debian:DebianCopyrightOutput
     yaml = formattedcode.output_yaml:YamlOutput
+    cyclonedx = formattedcode.output_cyclonedx:CycloneDxJsonOutput
+    cyclonedx-xml = formattedcode.output_cyclonedx:CycloneDxXmlOutput
