--- a/setup-mini.cfg
+++ b/setup-mini.cfg
@@ -80,7 +80,7 @@ install_requires =
     lxml >= 4.6.5
     MarkupSafe >= 1.0
     packageurl_python >= 0.9.0
-    packaging > 20
+    packaging >= 21.0.0
     # parameter_expansion >= 0.2.0
     # use temp advanced patched release
 	parameter-expansion-patched >= 0.2.1b4
