Update to SPDX license list 3.16
Thank-you-to: Steve Winslow <steve@swinslow.net> @swinslow
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/x11-fsf.yml
+++ b/src/licensedcode/data/licenses/x11-fsf.yml
@@ -3,5 +3,8 @@ short_name: X11-Style (FSF)
 name: X11-Style (FSF)
 category: Permissive
 owner: Free Software Foundation (FSF)
-spdx_license_key: LicenseRef-scancode-x11-fsf
+spdx_license_key: X11-distribute-modifications-variant
+other_spdx_license_keys:
+    - LicenseRef-scancode-x11-fsf
 minimum_coverage: 80
+notes: named by SPDX as "X11 License Distribution Modification Variant"
