--- a/src/licensedcode/data/non-english/licenses/dl-de-by-1-0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/dl-de-by-1-0-de.yml
@@ -1,6 +1,6 @@
 key: dl-de-by-1-0-de
 short_name: dl-de/by-1-0-de
-name: Datenlizenz Deutschland – Namensnennung – Version 1.0 - Deutsch
+name: Datenlizenz Deutschland - Namensnennung - Version 1.0 - Deutsch
 category: Permissive
 owner: govdata.de
 homepage_url: https://www.govdata.de/dl-de/by-1-0
