--- a/src/licensedcode/data/non-english/licenses/dl-de-by-2-0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/dl-de-by-2-0-de.yml
@@ -1,8 +1,9 @@
 key: dl-de-by-2-0-de
 short_name: dl-de/by-2-0-de
-name: Datenlizenz Deutschland – Namensnennung – Version 2.0 - Deutsch
+name: Datenlizenz Deutschland - Namensnennung - Version 2.0 - Deutsch
 category: Permissive
 owner: govdata.de
 homepage_url: http://www.govdata.de/dl-de/by-2-0
 other_urls:
     - https://www.dcat-ap.de/def/licenses/
+spdx_license_key: DL-DE-BY-2.0
