--- a/src/licensedcode/data/non-english/licenses/dl-de-by-nc-1-0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/dl-de-by-nc-1-0-de.yml
@@ -1,6 +1,6 @@
 key: dl-de-by-nc-1-0-de
 short_name: dl-de/by-nc-1-0-de
-name: Datenlizenz Deutschland – Namensnennung – nicht kommerziell – Version 1.0 - Deutsch
+name: Datenlizenz Deutschland - Namensnennung - nicht kommerziell - Version 1.0 - Deutsch
 category: Free Restricted
 owner: govdata.de
 homepage_url: https://www.govdata.de/dl-de/by-nc-1-0
