--- a/src/licensedcode/data/licenses/gladman-older-rijndael-code-use.yml
+++ b/src/licensedcode/data/licenses/gladman-older-rijndael-code-use.yml
@@ -4,4 +4,6 @@ name: Gladman Older Rigndael Code Use
 category: Permissive
 owner: Brian Gladman
 homepage_url: http://ccgi.gladman.plus.com/oldsite/cryptography_technology/rijndael/index.php
-spdx_license_key: LicenseRef-scancode-gladman-older-rijndael-code-use
+spdx_license_key: LicenseRef-scancode-gladman-older-rijndael-code
+other_spdx_license_keys:
+    - LicenseRef-scancode-gladman-older-rijndael-code-use
