Correct non-English license and rules
Add new language attribute to a Rule, deafulting to English.

Use proper language tags and SPDX ids for licenses that were kept back.

Reference: https://github.com/nexB/scancode-toolkit/issues/139
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/non-english/licenses/cc-by-nc-sa-2.0-fr.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-by-nc-sa-2.0-fr.yml
@@ -1,4 +1,7 @@
 key: cc-by-nc-sa-2.0-fr
+language: fr
+category: Free Restricted
+owner: Creative Commons
 short_name: Creative Commons Attribution-NonCommercial-ShareAlike 2.0 France
 name: Creative Commons Attribution-NonCommercial-ShareAlike 2.0 France
 spdx_license_key: CC-BY-NC-SA-2.0-FR
