--- a/src/licensedcode/data/non-english/licenses/cc-by-sa-3.0-at.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-by-sa-3.0-at.yml
@@ -1,4 +1,5 @@
 key: cc-by-sa-3.0-at
+language: de
 short_name: CC-BY-SA-3.0-AT
 name: Creative Commons Attribution Share Alike License 3.0 Austria
 category: Copyleft Limited
