--- a/src/licensedcode/data/non-english/licenses/cc-by-sa-3.0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-by-sa-3.0-de.yml
@@ -1,4 +1,6 @@
 key: cc-by-sa-3.0-de
+language: de
+category: Copyleft Limited
 short_name: Creative Commons Attribution Share Alike 3.0 Germany
 name: Creative Commons Attribution Share Alike 3.0 Germany
 spdx_license_key: CC-BY-SA-3.0-DE
@@ -7,3 +9,4 @@ other_urls:
 ignorable_urls:
     - https://creativecommons.org/
     - https://creativecommons.org/compatiblelicenses
+owner: Creative Commons
