--- a/src/licensedcode/data/non-english/licenses/cc-gpl-2.0-pt.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-gpl-2.0-pt.yml
@@ -1,4 +1,5 @@
 key: cc-gpl-2.0-pt
+language: pt
 short_name: CC-GPL-2.0-PT
 name: Creative Commons Licença Pública Geral do GNU (GPL) [General Public License]
 language: pt
