--- a/src/licensedcode/data/non-english/licenses/d-fsl-1.0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/d-fsl-1.0-de.yml
@@ -1,4 +1,5 @@
 key: d-fsl-1.0-de
+language: de
 short_name: Deutsche Freie Software Lizenz
 name: Deutsche Freie Software Lizenz
 category: Copyleft
