--- a/src/licensedcode/data/non-english/licenses/dl-de-by-1-0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/dl-de-by-1-0-de.yml
@@ -1,4 +1,5 @@
 key: dl-de-by-1-0-de
+language: de
 short_name: dl-de/by-1-0-de
 name: Datenlizenz Deutschland - Namensnennung - Version 1.0 - Deutsch
 category: Permissive
@@ -6,3 +7,4 @@ owner: govdata.de
 homepage_url: https://www.govdata.de/dl-de/by-1-0
 other_urls:
     - https://www.dcat-ap.de/def/licenses/
+spdx_license_key: LicenseRef-scancode-dl-de-by-1-0-de
