--- a/src/licensedcode/data/non-english/licenses/etalab-2.0-fr.yml
+++ b/src/licensedcode/data/non-english/licenses/etalab-2.0-fr.yml
@@ -1,7 +1,10 @@
 key: etalab-2.0-fr
+language: fr
+owner: France
+category: Unstated License
 short_name: Etalab Open License 2.0
 name: Etalab Open License 2.0
-#spdx_license_key: etalab-2.0
+spdx_license_key: etalab-2.0
 other_urls:
     - https://github.com/DISIC/politique-de-contribution-open-source/blob/master/LICENSE.pdf
     - https://raw.githubusercontent.com/DISIC/politique-de-contribution-open-source/master/LICENSE
