--- a/src/licensedcode/data/non-english/licenses/liliq-r-1.1.yml
+++ b/src/licensedcode/data/non-english/licenses/liliq-r-1.1.yml
@@ -1,6 +1,7 @@
 key: liliq-r-1.1
+language: fr
 short_name: LiLiQ-R-1.1
-name: Licence Libre du Québec – Réciprocité version 1.
+name: Licence Libre du Québec - Réciprocité version 1.
 language: fr
 category: Copyleft Limited
 owner: Quebec
