--- a/src/licensedcode/data/non-english/licenses/ogl-canada-2.0-fr.yml
+++ b/src/licensedcode/data/non-english/licenses/ogl-canada-2.0-fr.yml
@@ -1,4 +1,5 @@
 key: ogl-canada-2.0-fr
+language: fr
 short_name: OGL Canada 2.0
 name: Licence du gouvernement ouvert Canada 2.0
 category: Permissive
