--- a/src/licensedcode/data/non-english/licenses/cc-by-3.0-nl.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-by-3.0-nl.yml
@@ -1,4 +1,7 @@
 key: cc-by-3.0-nl
+language: nl
+category: Permissive
+owner: Creative Commons
 short_name: Creative Commons Attribution 3.0 Netherlands
 name: Creative Commons Attribution 3.0 Netherlands
 spdx_license_key: CC-BY-3.0-NL
