--- a/src/licensedcode/data/non-english/licenses/cc-by-nc-3.0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-by-nc-3.0-de.yml
@@ -1,4 +1,7 @@
 key: cc-by-nc-3.0-de
+language: de
+category: Free Restricted
+owner: Creative Commons
 short_name: Creative Commons Attribution Non Commercial 3.0 Germany
 name: Creative Commons Attribution Non Commercial 3.0 Germany
 spdx_license_key: CC-BY-NC-3.0-DE
