--- a/src/licensedcode/data/non-english/licenses/cc-by-nc-sa-3.0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-by-nc-sa-3.0-de.yml
@@ -1,4 +1,7 @@
 key: cc-by-nc-sa-3.0-de
+category: Free Restricted
+owner: Creative Commons
+language: de
 short_name: Creative Commons Attribution Non Commercial Share Alike 3.0 Germany
 name: Creative Commons Attribution Non Commercial Share Alike 3.0 Germany
 spdx_license_key: CC-BY-NC-SA-3.0-DE
