--- a/src/licensedcode/data/non-english/licenses/cc-by-sa-2.1-jp.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-by-sa-2.1-jp.yml
@@ -1,4 +1,7 @@
 key: cc-by-sa-2.1-jp
+owner: Creative Commons
+category: Copyleft Limited
+language: jp
 short_name: Creative Commons Attribution Share Alike 2.1 Japan
 name: Creative Commons Attribution Share Alike 2.1 Japan
 spdx_license_key: CC-BY-SA-2.1-JP
