--- a/src/licensedcode/data/non-english/licenses/cc-lgpl-2.1-pt.yml
+++ b/src/licensedcode/data/non-english/licenses/cc-lgpl-2.1-pt.yml
@@ -1,4 +1,5 @@
 key: cc-lgpl-2.1-pt
+language: pt
 short_name: CC-LGPL-2.1-PT
 name: Creative Commons Licença Pública Geral Menor do GNU
 language: pt
