--- a/src/licensedcode/data/non-english/licenses/dl-de-by-2-0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/dl-de-by-2-0-de.yml
@@ -1,4 +1,5 @@
 key: dl-de-by-2-0-de
+language: de
 short_name: dl-de/by-2-0-de
 name: Datenlizenz Deutschland - Namensnennung - Version 2.0 - Deutsch
 category: Permissive
