--- a/src/licensedcode/data/non-english/licenses/dl-de-by-nc-1-0-de.yml
+++ b/src/licensedcode/data/non-english/licenses/dl-de-by-nc-1-0-de.yml
@@ -1,4 +1,5 @@
 key: dl-de-by-nc-1-0-de
+language: de
 short_name: dl-de/by-nc-1-0-de
 name: Datenlizenz Deutschland - Namensnennung - nicht kommerziell - Version 1.0 - Deutsch
 category: Free Restricted
