--- a/src/licensedcode/data/non-english/licenses/liliq-p-1.1.yml
+++ b/src/licensedcode/data/non-english/licenses/liliq-p-1.1.yml
@@ -1,6 +1,7 @@
 key: liliq-p-1.1
+language: fr
 short_name: LiLiQ-P-1.1
-name: Licence Libre du Québec – Permissive version 1.1
+name: Licence Libre du Québec - Permissive version 1.1
 language: fr
 category: Copyleft Limited
 owner: Quebec
