--- a/src/licensedcode/data/non-english/licenses/liliq-rplus-1.1.yml
+++ b/src/licensedcode/data/non-english/licenses/liliq-rplus-1.1.yml
@@ -1,6 +1,7 @@
 key: liliq-rplus-1.1
+language: fr
 short_name: LiLiQ-Rplus-1.1
-name: Licence Libre du Québec – Réciprocité forte version 1.1
+name: Licence Libre du Québec - Réciprocité forte version 1.1
 category: Copyleft
 owner: Quebec
 homepage_url: http://opensource.org/licenses/LiLiQ-Rplus-1.1
