--- a/src/licensedcode/data/non-english/licenses/scola-fr.yml
+++ b/src/licensedcode/data/non-english/licenses/scola-fr.yml
@@ -1,5 +1,7 @@
 key: scola-fr
+language: fr
 short_name: Statistics Canada Open Licence Agreement
 name: Entente de licence ouverte de Statistique Canada
 owner:  Statistique Canada
 homepage_url: https://www.statcan.gc.ca/fra/reference/licence
+category: Unstated License
