--- a/src/licensedcode/data/licenses/liliq-r-1.1.yml
+++ b/src/licensedcode/data/licenses/liliq-r-1.1.yml
@@ -1,7 +1,7 @@
 key: liliq-r-1.1
 language: fr
 short_name: LiLiQ-R-1.1
-name: Licence Libre du Québec - Réciprocité version 1.
+name: Licence Libre du Québec – Réciprocité version 1.
 category: Copyleft Limited
 owner: Quebec
 homepage_url: https://opensource.org/licenses/LiLiQ-R-1.1
