Use correct SPDX ids for German licenses
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/dl-de-by-2-0-de.yml
+++ b/src/licensedcode/data/licenses/dl-de-by-2-0-de.yml
@@ -8,3 +8,5 @@ homepage_url: http://www.govdata.de/dl-de/by-2-0
 other_urls:
     - https://www.dcat-ap.de/def/licenses/
 spdx_license_key: DL-DE-BY-2.0
+other_spdx_license_keys:
+    - LicenseRef-scancode-dl-de-by-2-0-de
