Support non-English licenses
Improve in tests. Add a language tag there too.
Fix licenses with incorrect or missing metadata

Reference: https://github.com/nexB/scancode-toolkit/issues/139
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/src/licensedcode/data/licenses/cc-by-nc-nd-2.0-at.yml
+++ b/src/licensedcode/data/licenses/cc-by-nc-nd-2.0-at.yml
@@ -7,3 +7,5 @@ owner: Creative Commons
 homepage_url: https://creativecommons.org/licenses/by-nc-nd/2.0/
 text_urls:
     - https://creativecommons.org/licenses/by-nc-nd/2.0/legalcode.at
+spdx_license_key: LicenseRef-scancode-cc-by-nc-nd-2.0-at
+    
