--- a/src/licensedcode/data/licenses/cc-by-sa-3.0-de.yml
+++ b/src/licensedcode/data/licenses/cc-by-sa-3.0-de.yml
@@ -1,7 +1,7 @@
 key: cc-by-sa-3.0-de
 language: de
 category: Copyleft Limited
-short_name: Creative Commons Attribution Share Alike 3.0 Germany
+short_name: CC-BY-SA-3.0-DE
 name: Creative Commons Attribution Share Alike 3.0 Germany
 spdx_license_key: CC-BY-SA-3.0-DE
 other_urls:
