--- a/src/licensedcode/data/licenses/etalab-2.0-fr.yml
+++ b/src/licensedcode/data/licenses/etalab-2.0-fr.yml
@@ -2,8 +2,8 @@ key: etalab-2.0-fr
 language: fr
 owner: France
 category: Unstated License
-short_name: Etalab Open License 2.0
-name: Etalab Open License 2.0
+short_name: Etalab Open License 2.0 French
+name: Etalab Open License 2.0 French
 spdx_license_key: etalab-2.0
 other_urls:
     - https://github.com/DISIC/politique-de-contribution-open-source/blob/master/LICENSE.pdf
