--- a/src/licensedcode/data/licenses/scola-fr.yml
+++ b/src/licensedcode/data/licenses/scola-fr.yml
@@ -1,7 +1,8 @@
 key: scola-fr
 language: fr
-short_name: Statistics Canada Open Licence Agreement
+short_name: Statistics Canada Open Licence
 name: Entente de licence ouverte de Statistique Canada
 owner:  Statistique Canada
 homepage_url: https://www.statcan.gc.ca/fra/reference/licence
 category: Unstated License
+spdx_license_key: LicenseRef-scancode-scola-fr
