--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/cecill-b.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/cecill-b.txt.yml
@@ -1,3 +1,3 @@
 license_expressions:
-  - cecill-b
+  - cecill-b-en
 notes: this is a license from fossology license reference CECILL-B (CeCILL-B License) http://www.cecill.info/licences/Licence_CeCILL-B_V1-en.txt
