--- a/tests/licensedcode/data/datadriven/unknown/cclrc.txt.yml
+++ b/tests/licensedcode/data/datadriven/unknown/cclrc.txt.yml
@@ -1,4 +1,3 @@
 license_expressions:
-  - unknown
-  - warranty-disclaimer
+  - cclrc
 notes: this is a license from fossology license reference CCLRC (CCLRC License) http://www2-pcmdi.llnl.gov/cdat/docs/cdat-license
