--- a/src/licensedcode/data/licenses/cc-by-nc-nd-3.0-de.yml
+++ b/src/licensedcode/data/licenses/cc-by-nc-nd-3.0-de.yml
@@ -2,7 +2,7 @@ key: cc-by-nc-nd-3.0-de
 language: de
 category: Free Restricted
 owner: Creative Commons
-short_name: Creative Commons Attribution Non Commercial No Derivatives 3.0 Germany
+short_name: CC-BY-NC-ND-3.0-DE
 name: Creative Commons Attribution Non Commercial No Derivatives 3.0 Germany
 spdx_license_key: CC-BY-NC-ND-3.0-DE
 other_urls:
