--- a/src/licensedcode/data/licenses/nysl-0.9982-jp.yml
+++ b/src/licensedcode/data/licenses/nysl-0.9982-jp.yml
@@ -3,6 +3,7 @@ language: jp
 short_name: NYSL 0.9982 JP
 name: NYSL 0.9982 Japanese
 category: Permissive
+spdx_license_key: LicenseRef-scancode-nysl-0.9982-jp
 owner: Kazuhiro Inaba
 homepage_url: http://www.kmonos.net/nysl/index.en.html
 text_urls:
