--- a/src/licensedcode/data/rules/cc-by-nc-sa-3.0_zh.yml
+++ b/src/licensedcode/data/rules/cc-by-nc-sa-3.0_zh.yml
@@ -1,3 +1,4 @@
 license_expression: cc-by-nc-sa-3.0
-language: zh
 is_license_notice: yes
+ignorable_urls:
+    - http://creativecommons.org/licenses/by-nc-sa/3.0/deed.zh
