--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/cecill-c.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/cecill-c.txt.yml
@@ -1,3 +1,3 @@
 license_expressions:
-  - cecill-c
+  - cecill-c-en
 notes: this is a license from fossology license reference CECILL-C (CeCILL-C License) http://www.cecill.info/licences/Licence_CeCILL-C_V1-en.txt
