--- a/tests/licensedcode/data/datadriven/external/glc/CECILL-C.t1.yml
+++ b/tests/licensedcode/data/datadriven/external/glc/CECILL-C.t1.yml
@@ -1,5 +1,5 @@
 license_expressions:
-  - cecill-c
+  - cecill-c-en
 notes: |
   License test derived from a file of the BSD-licensed repository at:
   https://raw.githubusercontent.com/google/licensecheck/v0.3.1/testdata/CECILL-C.t1
