--- a/tests/licensedcode/data/datadriven/unknown/opl-1.0.txt.yml
+++ b/tests/licensedcode/data/datadriven/unknown/opl-1.0.txt.yml
@@ -1,12 +1,3 @@
 license_expressions:
-  - mpl-1.1
-  - mpl-1.1
-  - unknown-license-reference
-  - unknown
-  - free-unknown
-  - warranty-disclaimer
-  - unknown
-  - unknown-license-reference
-  - generic-trademark
+  - openi-pl-1.0
 notes: this is an mpl-1.1 derivative which is very rare.
-
