--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/s/subversion/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/s/subversion/stable_copyright-detailed.expected.yml
@@ -21,8 +21,9 @@ declared_license:
   - Unicode
   - AFL-3
 license_expression: (apache-2.0 AND apache-2.0) AND (bsd-new OR (apache-2.0 AND apache-2.0))
-  AND other-permissive AND bsd-new AND other-permissive AND (gpl-2.0-plus AND gpl-2.0) AND (gpl-3.0-plus
-  AND gpl-3.0) AND afl-3.0 AND (mit AND unicode) AND bsd-simplified AND bsd-new AND bsd-simplified
+  AND markus-kuhn-license AND bsd-new AND other-permissive AND (gpl-2.0-plus AND gpl-2.0) AND
+  (gpl-3.0-plus AND gpl-3.0) AND afl-3.0 AND (mit AND unicode) AND bsd-simplified AND bsd-new
+  AND bsd-simplified
 copyright: |
   Apache Software Foundation
   2007 Max Bowsher
@@ -59,8 +60,8 @@ matches:
     matched_length: 28
     match_coverage: '100.0'
     rule_relevance: 100
-    identifier: other-permissive_wcwidth_1.RULE
-    license_expression: other-permissive
+    identifier: markus-kuhn-license.LICENSE
+    license_expression: markus-kuhn-license
     is_license_text: yes
     is_license_notice: no
     is_license_reference: no
