--- a/tests/licensedcode/data/datadriven/lic4/sun-jsr-spec-04-2006_1.txt.yml
+++ b/tests/licensedcode/data/datadriven/lic4/sun-jsr-spec-04-2006_1.txt.yml
@@ -1,7 +1,6 @@
 license_expressions:
-  - proprietary-license 
-notes: this is not really the EJB or SDk spec but is essentially the same license
-  as the sun-jsr-spec-04-2006 but from BEA. The detection is not perfect, but we
-  do not want to add such a rare full text for now.
+  - proprietary-license
 expected_failure: yes
-
+notes: this is not really the EJB or SDk spec but is essentially the same license as the sun-jsr-spec-04-2006
+  but from BEA. The detection is not perfect, but we do not want to add such a rare full text
+  for now.
