--- a/src/licensedcode/data/licenses/cc-gpl-2.0-pt.yml
+++ b/src/licensedcode/data/licenses/cc-gpl-2.0-pt.yml
@@ -5,6 +5,10 @@ name: Creative Commons Licença Pública Geral do GNU (GPL) [General Public Lice
 category: Copyleft Limited
 owner: Creative Commons
 homepage_url: https://creativecommons.org/licenses/GPL/2.0/
+spdx_license_key: LicenseRef-scancode-cc-gpl-2.0-pt
 text_urls:
     - https://creativecommons.org/licenses/GPL/2.0/legalcode.pt
-spdx_license_key: LicenseRef-scancode-cc-gpl-2.0-pt
+ignorable_copyrights:
+    - (c) 1989, 1991 Free Software Foundation, Inc.
+ignorable_holders:
+    - Free Software Foundation, Inc.
