--- a/src/licensedcode/data/licenses/d-fsl-1.0-de.yml
+++ b/src/licensedcode/data/licenses/d-fsl-1.0-de.yml
@@ -24,9 +24,11 @@ other_urls:
     - https://www.hbz-nrw.de/produkte/open-access/lizenzen/dfsl/german-free-software-license
 minimum_coverage: 10
 ignorable_copyrights:
-    - (c) Ministerium fur Wissenschaft und Forschung Nordrhein-Westfalen 2004
+    - (c) Ministerium fur Wissenschaft und Forschung Nordrhein-Westfalen 2004 Erstellt von Axel
+        Metzger und Till Jaeger
 ignorable_holders:
-    - Ministerium fur Wissenschaft und Forschung Nordrhein-Westfalen
+    - Ministerium fur Wissenschaft und Forschung Nordrhein-Westfalen Erstellt von Axel Metzger
+        und Till Jaeger
 ignorable_urls:
     - http://www.d-fsl.de/
     - http://www.fsf.org/licenses/gpl
