--- a/src/licensedcode/data/licenses/dl-de-by-2-0-de.yml
+++ b/src/licensedcode/data/licenses/dl-de-by-2-0-de.yml
@@ -5,8 +5,10 @@ name: Datenlizenz Deutschland - Namensnennung - Version 2.0 - Deutsch
 category: Permissive
 owner: govdata.de
 homepage_url: http://www.govdata.de/dl-de/by-2-0
-other_urls:
-    - https://www.dcat-ap.de/def/licenses/
 spdx_license_key: DL-DE-BY-2.0
 other_spdx_license_keys:
     - LicenseRef-scancode-dl-de-by-2-0-de
+other_urls:
+    - https://www.dcat-ap.de/def/licenses/
+ignorable_urls:
+    - http://www.govdata.de/dl-de/by-2-0
