Do not use pytest 7.0.0 which is buggy
Reference: https://github.com/pytest-dev/pytest/issues/9608
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,8 +37,7 @@ where=src
 
 [options.extras_require]
 testing =
-    # upstream
-    pytest >= 6
+    pytest >= 6, != 7.0.0
     pytest-xdist >= 2
 docs=
     Sphinx>=3.3.1
