--- a/src/licensedcode/data/licenses/cc-by-3.0-at.yml
+++ b/src/licensedcode/data/licenses/cc-by-3.0-at.yml
@@ -9,3 +9,6 @@ spdx_license_key: CC-BY-3.0-AT
 text_urls:
     - https://creativecommons.org/licenses/by/3.0/at/legalcode
 faq_url: https://creativecommons.org/licenses/by/3.0/at/
+ignorable_urls:
+  - https://creativecommons.org/
+
