Align tests witrh latest license rules
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/skype-eula.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/skype-eula.txt.yml
@@ -1,8 +1,11 @@
 license_expressions:
   - proprietary-license
+  - unknown-license-reference
   - proprietary-license
   - unknown-license-reference
   - proprietary-license
+  - unknown-license-reference
+  - unknown-license-reference
   - unknown-license-reference
   - unknown-license-reference
   - unknown-license-reference
