--- a/tests/licensedcode/data/datadriven/unknown/cigna-go-you-mobile-app-eula.txt.yml
+++ b/tests/licensedcode/data/datadriven/unknown/cigna-go-you-mobile-app-eula.txt.yml
@@ -5,5 +5,8 @@ license_expressions:
   - unknown-license-reference
   - warranty-disclaimer
   - warranty-disclaimer
+  - unknown-license-reference
   - warranty-disclaimer
+  - unknown-license-reference
+  - unknown-license-reference
 notes: this is using unknwown license detection
