--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/oasis.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/oasis.txt.yml
@@ -1,1 +1,3 @@
+license_expressions:
+  - proprietary-license
 notes: this is a license from fossology license reference OASIS (OASIS License) http://logiciels.cnes.fr/OASIS/en/accept2.htm
