--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/opl.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/opl.txt.yml
@@ -1,3 +1,4 @@
 license_expressions:
   - opl-1.0
+  - opl-1.0
 notes: this is a license from fossology license reference OPL (OpenContent License 1.0) http://www.opencontent.org/opl.shtml
