--- a/tests/licensedcode/data/datadriven/external/fossology-licenses/piriform.txt.yml
+++ b/tests/licensedcode/data/datadriven/external/fossology-licenses/piriform.txt.yml
@@ -1,3 +1,5 @@
 license_expressions:
   - unknown-license-reference
+  - unknown-license-reference
+  - unknown-license-reference
 notes: this is a license from fossology license reference Piriform (Piriform EULA) http://www.piriform.com/business/support-license
