--- a/tests/licensedcode/data/datadriven/unknown/citrix.txt.yml
+++ b/tests/licensedcode/data/datadriven/unknown/citrix.txt.yml
@@ -5,6 +5,7 @@ license_expressions:
   - warranty-disclaimer
   - free-unknown
   - free-unknown
+  - unknown-license-reference
   - commercial-license
   - unknown
 notes: this is a license from fossology license reference Citrix (CITRIX LICENSE AGREEMENT)
