--- a/tests/licensedcode/data/datadriven/unknown/qt.commercial.txt.yml
+++ b/tests/licensedcode/data/datadriven/unknown/qt.commercial.txt.yml
@@ -7,6 +7,7 @@ license_expressions:
   - lgpl-2.0-plus AND gpl-1.0-plus
   - lgpl-2.1 AND gpl-2.0 AND gpl-3.0
   - unknown
+  - unknown-license-reference
   - commercial-license
   - unknown
   - commercial-license
