--- a/tests/formattedcode/data/yaml/simple-expected.yaml
+++ b/tests/formattedcode/data/yaml/simple-expected.yaml
@@ -14,7 +14,7 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
-    output_format_version: 1.0.0
+    output_format_version: 2.0.0
     message:
     errors: []
     extra_data:
@@ -47,6 +47,7 @@ files:
     holders: []
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: 1
     dirs_count: '0'
     size_count: 55
@@ -82,6 +83,7 @@ files:
         end_line: 1
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: '0'
     dirs_count: '0'
     size_count: '0'
