--- a/tests/formattedcode/data/yaml/tree/expected.yaml
+++ b/tests/formattedcode/data/yaml/tree/expected.yaml
@@ -15,7 +15,7 @@ headers:
       for any legal advice.
       ScanCode is a free software code scanning tool from nexB Inc. and others.
       Visit https://github.com/nexB/scancode-toolkit/ for support and download.
-    output_format_version: 1.0.0
+    output_format_version: 2.0.0
     message:
     errors: []
     extra_data:
@@ -54,6 +54,7 @@ files:
         end_line: 1
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: '0'
     dirs_count: '0'
     size_count: '0'
@@ -89,6 +90,7 @@ files:
         end_line: 1
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: '0'
     dirs_count: '0'
     size_count: '0'
@@ -124,6 +126,7 @@ files:
         end_line: 1
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: '0'
     dirs_count: '0'
     size_count: '0'
@@ -153,6 +156,7 @@ files:
     holders: []
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: 4
     dirs_count: '0'
     size_count: 361
@@ -188,6 +192,7 @@ files:
         end_line: 1
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: '0'
     dirs_count: '0'
     size_count: '0'
@@ -223,6 +228,7 @@ files:
         end_line: 1
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: '0'
     dirs_count: '0'
     size_count: '0'
@@ -258,6 +264,7 @@ files:
         end_line: 1
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: '0'
     dirs_count: '0'
     size_count: '0'
@@ -293,6 +300,7 @@ files:
         end_line: 1
     authors: []
     package_manifests: []
+    for_packages: []
     files_count: '0'
     dirs_count: '0'
     size_count: '0'
