Add misc new licenses rules and update tests
Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/licensedcode/data/datadriven/lic1/complex.el.yml
+++ b/tests/licensedcode/data/datadriven/lic1/complex.el.yml
@@ -8,6 +8,7 @@ license_expressions:
   - gpl-3.0-plus
   - agpl-3.0-plus
   - lgpl-3.0-plus
+  - bsd-simplified
   - bsd-2-clause-views
   - bsd-new
   - public-domain
