--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/e/epiphany-browser/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/e/epiphany-browser/stable_copyright-detailed.expected.yml
@@ -19,11 +19,11 @@ declared_license:
   - CC0-1.0
   - CC-BY-SA-3.0
   - CC-BY-SA-4.0
-license_expression: (gpl-3.0-plus AND gpl-3.0-plus) AND (cc0-1.0 AND cc0-1.0) AND (gpl-2.0-plus
-  AND gpl-2.0-plus) AND (gpl-3.0-plus AND gpl-3.0-plus) AND cc-by-sa-3.0 AND (lgpl-2.0-plus
-  AND lgpl-2.0-plus) AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (lgpl-2.0-plus AND lgpl-2.0-plus)
-  AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (apache-2.0 AND apache-2.0) AND (gpl-3.0-plus AND
-  gpl-3.0-plus) AND (cc-by-sa-4.0 AND cc-by-sa-4.0)
+license_expression: (gpl-3.0-plus AND gpl-3.0-plus) AND (cc0-1.0 AND cc0-1.0 AND cc0-1.0 AND
+  cc0-1.0 AND cc0-1.0) AND (gpl-2.0-plus AND gpl-2.0-plus) AND (gpl-3.0-plus AND gpl-3.0-plus)
+  AND cc-by-sa-3.0 AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (lgpl-2.0-plus AND lgpl-2.0-plus)
+  AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (lgpl-2.0-plus AND lgpl-2.0-plus) AND (apache-2.0
+  AND apache-2.0) AND (gpl-3.0-plus AND gpl-3.0-plus) AND (cc-by-sa-4.0 AND cc-by-sa-4.0)
 copyright: |
   2009-2018 Igalia S.L
   2002 Jorn Baayen
@@ -272,6 +272,54 @@ matches:
     is_license_tag: yes
     is_license_intro: no
     matched_text: 'License: cc0-1.0'
+  - score: '100.0'
+    start_line: 171
+    end_line: 171
+    matcher: 2-aho
+    rule_length: 1
+    matched_length: 1
+    match_coverage: '100.0'
+    rule_relevance: 100
+    identifier: cc0-1.0_176.RULE
+    license_expression: cc0-1.0
+    is_license_text: no
+    is_license_notice: no
+    is_license_reference: yes
+    is_license_tag: no
+    is_license_intro: no
+    matched_text: CC0
+  - score: '100.0'
+    start_line: 173
+    end_line: 173
+    matcher: 2-aho
+    rule_length: 1
+    matched_length: 1
+    match_coverage: '100.0'
+    rule_relevance: 100
+    identifier: cc0-1.0_176.RULE
+    license_expression: cc0-1.0
+    is_license_text: no
+    is_license_notice: no
+    is_license_reference: yes
+    is_license_tag: no
+    is_license_intro: no
+    matched_text: CC0
+  - score: '100.0'
+    start_line: 175
+    end_line: 175
+    matcher: 2-aho
+    rule_length: 1
+    matched_length: 1
+    match_coverage: '100.0'
+    rule_relevance: 100
+    identifier: cc0-1.0_176.RULE
+    license_expression: cc0-1.0
+    is_license_text: no
+    is_license_notice: no
+    is_license_reference: yes
+    is_license_tag: no
+    is_license_intro: no
+    matched_text: CC0
   - score: '100.0'
     start_line: 178
     end_line: 179
