--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -1,4 +1,4 @@
-name: Release uinvers on PyPI
+name: Release library as a PyPI wheel and sdist on tag
 
 on:
   release:
@@ -6,15 +6,15 @@ on:
 
 jobs:
   build-n-publish:
-    name: Build and publish univers to PyPI
+    name: Build and publish library to PyPI
     runs-on: ubuntu-20.04
 
 steps:
     - uses: actions/checkout@master
-    - name: Set up Python 3.6
+    - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.6
+        python-version: 3.8
     - name: Install pypa/build
       run: >-
         python -m
@@ -29,8 +29,9 @@ steps:
         --wheel
         --outdir dist/
         .
-    - name: Publish distribution 📦 to PyPI
+    - name: Publish distribution  to PyPI
       if: startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@master
       with:
         password: ${{ secrets.PYPI_API_TOKEN }}
+        
