--- a/.github/workflows/pypi-release.yml
+++ b/.github/workflows/pypi-release.yml
@@ -5,7 +5,7 @@ on:
     types: [created]
 
 jobs:
-  build-n-publish:
+  build-and-publish-to-pypi:
     name: Build and publish library to PyPI
     runs-on: ubuntu-20.04
     steps:
